frontend/components/stores/StoresListGroupItem/styles.module.css
/* * */
/* CONTAINER */

.container {
	display: flex;
	flex-direction: column;
	gap: var(--size-spacing-20);
	align-items: flex-start;
	justify-content: flex-start;
	padding: var(--size-spacing-20);
	cursor: pointer;
	scroll-margin-top: calc(var(--size-height-header) * 1.25);
	background-color: var(--color-system-background-100);
	border-top: 1px solid var(--color-system-border-100);
}

.container.isSelected {
	position: relative;
	z-index: 999;
	box-shadow: var(--box-shadow-lg);
}

/* * */
/* HEADER */

.header {
	display: flex;
	flex-direction: column;
	align-items: flex-start;
	justify-content: flex-start;
}

.storeBrand {
	font-size: var(--font-size-text);
	font-weight: var(--font-weight-medium);
	color: var(--color-system-text-300);
}

.storeName {
	margin-bottom: -10px;
	font-size: var(--font-size-heading);
	font-weight: var(--font-weight-bold);
	color: var(--color-system-text-100);
}

.container:hover .storeName {
	text-decoration: underline;
}

/* * */
/* INFO GROUP WRAPPER */

.infoGroupWrapper .label {
	padding-bottom: 3px;
	font-size: var(--font-size-muted);
	font-weight: var(--font-weight-bold);
	color: var(--color-system-text-300);
	text-transform: uppercase;
}

.infoGroupWrapper .value {
	font-size: var(--font-size-text);
	font-weight: var(--font-weight-medium);
	color: var(--color-system-text-100);
}

/* * */
/* ACTIONS WRAPPER */

.actionsWrapper {
	display: flex;
	flex-direction: row;
	gap: var(--size-spacing-10);
}

